GNOME Bugzilla – Bug 758543
vaapipostproc: Regression make vaapipostproc unusable
Last modified: 2015-11-23 15:26:48 UTC
vaapipostproc is always working in passthrough mode irrespective of setting any property (eg: hue, saturation etc). commit introduced the regression: commit 757833230bc73b8e3b4e31649e4618ba802bea51 Author: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com> Date: Mon Nov 16 17:49:01 2015 +0100 vaapipostproc: don't set caps change at first set When the source caps change, the filter is destroyed and recreated. Nonetheless, this happens every time the vaapipostproc starts, since the caps change detection algorithm does not take in consideration when the caps are set by first time. This patch intents to be an optimization, to avoid a useless filter destroy-creation cycle when the sources caps are set for first time. The new helper function video_info_update() is a refactorization to avoid duplicated code. Signed-off-by: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com> https://bugzilla.gnome.org/show_bug.cgi?id=758007
d'oh! Let's revert it.
(In reply to Víctor Manuel Jáquez Leal from comment #1) > d'oh! > > Let's revert it. Please wait. I will do it if necessary. Right now i am tracking one more issue related with this. If it requires more changes, then I will revert this for this release.
(In reply to sreerenj from comment #2) > (In reply to Víctor Manuel Jáquez Leal from comment #1) > > d'oh! > > > > Let's revert it. > > Please wait. I will do it if necessary. Right now i am tracking one more > issue related with this. If it requires more changes, then I will revert > this for this release. OK!
commit 0f3e8139567ee8658aba68657a53f040cd94c29e Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Mon Nov 23 17:21:23 2015 +0200 vaapipostproc: Correctly detect the caps change This is a quick fix for regression introuduced by the commit 757833230bc73b8e3b4e31649e4618ba802bea51 With out this, the gst_vaapipostproc_create() will never get invoked. https://bugzilla.gnome.org/show_bug.cgi?id=758543