vaapipostproc: Correctly detect the caps change

This is a quick fix for regression introuduced by the
commit 757833230bc73b8e3b4e31649e4618ba802bea51

With out this, the gst_vaapipostproc_create() will
never get invoked.

https://bugzilla.gnome.org/show_bug.cgi?id=758543